# tmux-chatgpt

./: README.md  pyproject.toml  tmux-chatgpt.tmux
scripts/: chatgpt_interact.py
tmux_chatgpt/: __main__.py  chatgpt_invoke.sh
