[tool.poetry]
name = "tmux-chatgpt"
version = "0.1.0"
description = "A tmux plugin for interacting with OpenAI's ChatGPT within your tmux sessions."
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
